trunk/Archive/fe13ef70c6c6a08e23d101a04c3849d2-e54ee7a04e4b807da0930236d4cc94dc/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:9:10: warning: statement has no effect [-Wunused-value]
     for(i; <11; i++)
          ^
main.cpp:9:12: error: expected primary-expression before '<' token
     for(i; <11; i++)
            ^
